add md displayer

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -124,3 +124,8 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+/* The Tailwindcss takes over markdown default sytels */
+.markdown > * {
+  all: revert;
+}
